<resources>
    <string name="app_name">Oinkbrew</string>
    <string name="action_settings">Settings</string>
    <string name="activity_configuration_list_title">Configurations</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_archived">Archived</string>

    <string name="drawer_start_brew">Start a Brew</string>
    <string name="drawer_start_fermentation">Start a Fermentation</string>
    <string name="drawer_configurations">Configurations</string>
    <string name="drawer_brewpis">BrewPis</string>
    <string name="drawer_devices">Devices</string>
    <string name="drawer_settings">Settings</string>
    <string name="pref_key_api_server_settings">API Server</string>
    <string name="pref_title_api_server_url">API Server Url</string>
    <string name="pref_title_api_server_username">Username</string>
    <string name="pref_title_api_server_password">Password</string>
    <string name="error_title_invalid_input">Invalid Input</string>
    <string name="error_msg_invalid_url">Provided text is not a valid Url</string>
    <string name="error_configurations_empty">No configurations found.</string>
    <string name="error_log_empty">No log data found.</string>
    <string name="error_brewpis_empty">No BrewPi found.</string>
    <string name="error_settings_api_url_missing">API Url not set</string>
    <string name="action_change_name">Change name</string>
    <string name="action_reset">Reset</string>
    <string name="ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="pref_key_fermentation_settings">Fermentation</string>
    <string name="pref_title_fermentation_heat_period">Heat Period (ms)</string>
    <string name="pref_title_fermentation_cooling_period">Cooling Period (ms)</string>
    <string name="pref_title_fermentation_cooling_on_time">Minimum Cooling On Time (ms)</string>
    <string name="pref_title_fermentation_cooling_off_time">Minimum Cooling Off Time (ms)</string>
    <string name="pref_title_fermentation_p">PID: proportinal value (P)</string>
    <string name="pref_title_fermentation_i">PID: integral value (I)</string>
    <string name="pref_title_fermentation_d">PID: derivative value (D)</string>
    <string name="action_device_configuration">Device configuration</string>
    <string name="configuration_wort_pump">Wort Pump</string>
    <string name="configuration_water_pump">Water Pump</string>
    <string name="configuration_boil_out">Boil Out</string>
    <string name="configuration_boil_inside">Boil Inside</string>
    <string name="configuration_boil_intensity">Boil PWM</string>
    <string name="configuration_hlt_out">HLT Out</string>
    <string name="configuration_mash_in">Mash In</string>
    <string name="configuration_mash_out">Mash Out</string>
    <string name="configuration_target">Target</string>
    <string name="configuration_timer">Timer</string>
    <string name="configuration_fridge">Fridge</string>
    <string name="configuration_beer_1">Beer 1</string>
    <string name="configuration_beer_2">Beer 2</string>
    <string name="configuration_empty_temp">--.- ºC</string>
    <string name="configuration_empty_time">--:--:--</string>
    <string name="configuration_empty_pwm">-%</string>
    <string name="action_auto_refresh">Auto refresh</string>
    <string name="action_last_3_hours">Last 3 hours</string>
    <string name="action_last_6_hours">Last 6 hours</string>
    <string name="action_last_9_hours">Last 9 hours</string>
    <string name="action_last_12_hours">Last 12 hours</string>
    <string name="action_change_target_temp">Change Target Temperature</string>
    <string name="action_change_target_intensity">Change Target Intensity</string>
    <string name="pref_title_fermentation_fan_pwm">Fan PWM</string>
    <string name="configuration_target_update_success">Target Temperature Updated</string>
    <string name="configuration_new_heating_hlt">Heating HLT</string>
    <string name="configuration_new_heating_boil">Heating Boil</string>
    <string name="configuration_new_heating_fridge">Heating</string>
    <string name="pref_key_brew_settings">Brew</string>
    <string name="pref_title_brew_heat_period">Heating Period (ms)</string>
    <string name="pref_title_brew_p">PID: proportinal value (P)</string>
    <string name="pref_title_brew_i">PID: integral value (I)</string>
    <string name="pref_title_brew_d">PID: derivative value (D)</string>
    <string name="configuration_archived">Configuration archived</string>
    <string name="configuration_deleted">Configuration deleted</string>
    <string name="configuration_hlt">HLT</string>
    <string name="configuration_mash">Mash</string>
    <string name="configuration_boil">Boil</string>
    <string name="action_set_timer">Set Timer in Minutes</string>
    <string name="action_last_15_minutes">Last 15 minutes</string>
    <string name="action_last_30_minutes">Last 30 minutes</string>
    <string name="action_last_1_hour">Last 1 hour</string>
    <string name="action_last_2_hour">Last 2 hours</string>
    <string name="configuration_out">Out</string>
    <string name="configuration_in">In</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="saving">Saving</string>
    <string name="saving_message">Wait while saving...</string>
    <string name="alert">Alert</string>
    <string name="updating">Updating</string>
    <string name="updating_message">Wait while updating...</string>
    <string name="action_always_on">Always on</string>

</resources>
