<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_api_server_settings"
        android:title="@string/pref_key_api_server_settings">
        <EditTextPreference
            android:key="pref_api_server_url"
            android:inputType="textUri"
            android:title="@string/pref_title_api_server_url"
            android:defaultValue="" />
        <EditTextPreference
            android:key="pref_api_server_username"
            android:inputType="text"
            android:title="@string/pref_title_api_server_username"
            android:defaultValue="" />
        <EditTextPreference
            android:key="pref_api_server_password"
            android:inputType="textPassword"
            android:title="@string/pref_title_api_server_password"
            android:defaultValue="" />
        <CheckBoxPreference
            android:key="pref_api_allow_all_certs"
            android:title="Allow all SSL Certs"
            android:summary="WARNING! Activating this option can be a security issue."
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_fermentation_settings"
        android:title="@string/pref_key_fermentation_settings">
        <EditTextPreference
            android:key="pref_fermentation_heat_period"
            android:inputType="number"
            android:title="@string/pref_title_fermentation_heat_period"
            android:defaultValue="4000" />
        <EditTextPreference
            android:key="pref_fermentation_cooling_period"
            android:inputType="number"
            android:title="@string/pref_title_fermentation_cooling_period"
            android:defaultValue="1200000" />
        <EditTextPreference
            android:key="pref_fermentation_cooling_on_time"
            android:inputType="number"
            android:title="@string/pref_title_fermentation_cooling_on_time"
            android:defaultValue="210000" />
        <EditTextPreference
            android:key="pref_fermentation_cooling_off_time"
            android:inputType="number"
            android:title="@string/pref_title_fermentation_cooling_off_time"
            android:defaultValue="300000" />
        <EditTextPreference
            android:key="pref_fermentation_p"
            android:inputType="numberDecimal"
            android:title="@string/pref_title_fermentation_p"
            android:defaultValue="60.0" />
        <EditTextPreference
            android:key="pref_fermentation_i"
            android:inputType="numberDecimal"
            android:title="@string/pref_title_fermentation_i"
            android:defaultValue="0.001" />
        <EditTextPreference
            android:key="pref_fermentation_d"
            android:inputType="numberDecimal"
            android:title="@string/pref_title_fermentation_d"
            android:defaultValue="-2" />
    </PreferenceCategory>
</PreferenceScreen>